Adding cache to Java SDK check
Signed-off-by: Ricardo Zanini <zanini@redhat.com>